[project]
name = "projetoapifilmes"
version = "0.1.0"
description = ""
authors = [
    {name = "Letícia Soares",email = "ssoareslethy@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
